--- a/lec-04-test/test.html
+++ b/lec-04-test/test.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Coursera is cool$</title>
+	<title>Coursera is cool</title>
 </head>
 <body>
 	Content
