--- a/lec-04-test/index.html
+++ b/lec-04-test/index.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
-	<title>Coursera is cool</title>
+	<title>Betti szappanboltja :)</title>
+	<style>
+		h1, h2, h3 {
+			color: green;
+			font-size: medium;
+		}
+
+		article {
+			color: grey;
+			font-size: large;
+		}
+		
+	</style>
 </head>
+
 <body>
-	Content
+	Tartalom
+	<article>This is an article element.<article>
+		<div>This is a div element under an article element.<p>This is a p element inside a div element.</p></div>
+	<h1>This is h1.</h1>
+	<h2>This is h2.</h2>
+	<h3>This is h3.</h3>
 </body>
+
+<footer>This is the footer of the page.</footer>
+
 </html>
