--- a/betti-weblap-dev/index.html
+++ b/betti-weblap-dev/index.html
@@ -42,6 +42,10 @@
 	<h3>This is h3.</h3>
 </body>
 
+<div id="box">
+	<div id="content">Ez egy doboz</div>
+</div>
+
 <footer>A szinkront készítette a mafilm audio kft. Gyártásvezető: Nagy Simon</footer>
 
 </html>
