--- a/betti-weblap-dev/index.html
+++ b/betti-weblap-dev/index.html
@@ -43,7 +43,7 @@
 </body>
 
 <div id="box">
-	<div id="content">Ez egy doboz</div>
+	<div id="content">Ez egy doboz, sok szöveget kell ide írni, hogy a scrollcucc látszódjon. Nagyszerű feature ez, minden weblapon elfér.</div>
 </div>
 
 <footer>A szinkront készítette a mafilm audio kft. Gyártásvezető: Nagy Simon</footer>
