--- a/betti-weblap-v02/gyogyn.html
+++ b/betti-weblap-v02/gyogyn.html
@@ -19,8 +19,8 @@
     egymás mellé helyezése.-->
 <section>
 <div>
-    <p id="nav"><a href="/">Home</a></p>
-    <p id="nav"><a href="/">Gyógynövénnyel (ön itt áll)</a></p>
+    <p id="nav"><a href="/">Főoldal</a></p>
+    <p id="nav"><a href="/gyogyn.html">Gyógynövénnyel (ön itt áll)</a></p>
     <p id="nav"><a href="/">Aloldal2</a></p>
     <p id="nav"><a href="/">Aloldal2</a></p>
 </div>
