--- a/betti-weblap-v02/index.html
+++ b/betti-weblap-v02/index.html
@@ -19,7 +19,7 @@
     egymás mellé helyezése.-->
 <section>
 <div>
-    <p id="nav"><a href="/">Home</a></p>
+    <p id="nav"><a href="/">Főoldal</a></p>
     <p id="nav"><a href="/gyogyn.html">Gyógynövénnyel</a></p>
     <p id="nav"><a href="/">Aloldal2</a></p>
     <p id="nav"><a href="/">Aloldal2</a></p>
