--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -13,7 +13,7 @@
 <div class="row">
     <div class="col-lg-4 col-md-6 container">
         <p class="boxtitle title1">Paprika</p>
-        <p class="boxcontent">content goes here, some text to simulate, that 
+        <p>content goes here, some text to simulate, that 
             there is a longer text here, so i can position properly.
             content goes here, some text to simulate, that 
             there is a longer text here, so i can position properly.
@@ -26,7 +26,7 @@
 
     <div class="col-lg-4 col-md-6 container">
         <p class="boxtitle title2">Fries</p>
-        <p class="boxcontent">content goes here, some text to simulate, that 
+        <p>content goes here, some text to simulate, that 
             there is a longer text here, so i can position properly.
             content goes here, some text to simulate, that 
             there is a longer text here, so i can position properly.
@@ -37,9 +37,9 @@
         </p>
     </div>
 
-    <div class="col-lg-4 col-md-6 container">
+    <div class="col-lg-4 col-md-12 container">
         <p class="boxtitle title3">Pork</p>
-        <p class="boxcontent">content goes here, some text to simulate, that 
+        <p>content goes here, some text to simulate, that 
             there is a longer text here, so i can position properly.
             content goes here, some text to simulate, that 
             there is a longer text here, so i can position properly.
