--- a/betti-bootstrap/gyogyn.html
+++ b/betti-bootstrap/gyogyn.html
@@ -13,10 +13,10 @@
 
 <section>
 <div>
-    <p class="nav navtext"><a href="/">Főoldal</a></p>
-    <p class="nav navtext"><a href="/gyogyn.html">gyógynövényes termékek</a></p>
-    <p class="nav navtext"><a href="/">Aloldal2</a></p>
-    <p class="nav navtext"><a href="/">Aloldal2</a></p>
+    <p class="nav navtext"><a href="/index.html">főoldal</a></p>
+    <p class="nav navtext"><a href="/gyogyn.html">gyógynövényes</a></p>
+    <p class="nav navtext"><a href="/sub2.html">egyéb</a></p>
+    <p class="nav navtext"><a href="/self.html">rólam</a></p>
 </div>
 
 </section>
