--- a/betti-bootstrap/sub2.html
+++ b/betti-bootstrap/sub2.html
@@ -9,12 +9,14 @@
 <body> 
 
 <div class="main">webshop cím placeholder</div>
+<div class="sub">másik aloldal - pl. nem gyógynövényes cuccoknak
+</div>
 
 <section>
 <div>
-    <p class="nav navtext"><a href="/">Főoldal</a></p>
-    <p class="nav navtext"><a href="/gyogyn.html">gyógynövényes termékek</a></p>
-    <p class="nav navtext"><a href="/">Aloldal2</a></p>
+    <p class="nav navtext"><a href="/index.html">főoldal</a></p>
+    <p class="nav navtext"><a href="/gyogyn.html">gyógynövényes</a></p>
+    <p class="nav navtext"><a href="/sub2.html">egyéb</a></p>
     <p class="nav navtext"><a href="/">Aloldal2</a></p>
 </div>
 
@@ -47,8 +49,10 @@
     <div id="bottom">Oldal alja navigációs panel.</div>
     <ul>
         <li><a href="/">Főoldal</a></li>
-        <li><a href="https://www.benkeerikaszappan.hu/img/97662/440102020/440102020.jpg?time=1623768857" target="_blank">Kép egy szappanról</a></li>
-		<li><a href="https://hu.wikipedia.org/wiki/Szappan" target="_blank">A szappan meghatározása</a></li>
+        <li><a href="https://www.benkeerikaszappan.hu/img/97662/440102020/440102020.jpg?time=1623768857" 
+            target="_blank">kifelé mutató <link rel="stylesheet" href=""></a></li>
+		<li><a href="https://hu.wikipedia.org/wiki/Szappan" target="_blank">
+            kifelé mutató link</a></li>
     </ul>
 </footer>
 
